[metadata]
name = replauth
version = 1.0.0
author = DaInfloop
author_email = replauth@dainlfoop.is-a.dev
description = A ReplAuth Library for Python
long_description = file: README.md
long_description_content_type = text/markdown
keywords = replit, utils, auth, flask
status = stable
url = https://github.com/DaInfLoop/repl-auth-python
project_urls =
    Documentation = https://github.com/DaInfLoop/repl-auth-python
    Source Code = https://github.com/DaInfLoop/repl-auth-python
    Bug Tracker = https://github.com/DaInfLoop/repl-auth-python/issues
    Discussions = https://github.com/DaInfLoop/repl-auth-python/discussions
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Operating System :: OS Independent
    Topic :: Utilities

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
